# sinagot

./: .gitignore  LICENCE  README.md  mkdocs.yml  pyproject.toml  setup.py  update_docs_requirements.sh
docs/: configuration_file.md  custom.css  requirements.txt
docs/API/: dataset.md  record.md  record_collection.md  scope.md  script.md  step.md  step_collection.md  subset.md  workspace.md
example/harbor/: workspace.toml
example/harbor/data/computed/: REC-20200601-count.csv  REC-20200601-mean.csv  REC-20200603-count.csv  REC-20200603-mean.csv
example/harbor/data/raw/: REC-20200601-raw.csv
example/harbor/dataset/computed/: REC-20200602-count.csv  REC-20200602-mean.csv
example/harbor/dataset/raw/: REC-20200602-raw.csv  REC-20200603-raw.csv
example/harbor/scripts/: count.py  mean.py
sinagot/: __init__.py  config.py  logger.py  run_manager.py  script.py  utils.py
sinagot/models/: __init__.py  dataset.py  exceptions.py  model.py  record.py  record_collection.py  run_manager.py  scope.py  step.py  step_collection.py  subset.py  workspace.py
sinagot/plugins/: __init__.py  dask.py  dask_run_manager.py
sinagot/plugins/models/: clinical.py  pandas.py  processed.py
sinagot/plugins/processed_models/: __init__.py  record.py  record_collection.py
tests/: conftest.py  test_count_detail.py  test_count_raw.py  test_count_step.py  test_dask.py  test_dataset.py  test_log.py  test_model.py  test_pandas.py  test_record.py  test_record_collection.py  test_record_log.py  test_run.py  test_scope.py  test_scope_mode.py  test_scripts.py  test_sinagot.py  test_status.py  test_step.py  test_step_collection.py  test_subset.py  test_utils.py  test_version.py  test_workspace.py
tests/data/config_custom_name/: custom_name.toml
tests/data/configs/: custom_name.toml
tests/data/minimal_mode/: dataset.toml  workspace.toml
tests/data/minimal_mode/scripts/: first_step.py  next_step.py
tests/data/multiple_path/: dataset.toml  workspace.toml
tests/data/pandas/: workspace.toml
tests/data/pandas/dataset/REC-200319-A/: series.csv  series.json
tests/data/pandas/dataset/REC-200320-A/: series.csv  series.json
tests/data/scripts/EEG/: preprocess.py
tests/data/sonetaa/: custom_conf.toml  dataset.toml  workspace.toml
tests/data/sonetaa/dataset/: dataset.toml  workspace.toml
tests/data/sonetaa/dataset/CLINICAL/: data.csv
tests/data/sonetaa/dataset/PROCESSED/REC-200320-A/HDC/: norm-scores.csv
tests/data/sonetaa/scripts/: dataset.toml  workspace.toml
tests/data/sonetaa/scripts/behavior/: scores.py  scores_norm.py
tests/data/sonetaa/scripts/behavior/models/: record.py  record_collection.py  subset.py
tests/data/sonetaa/scripts/pdf/: gen_report.py
tests/v0.1.3/: test_count_detail.py  test_record_collection.py  test_run.py  test_scope.py  test_status.py  test_step.py  test_subset.py
tests/v0.1.3/data/multiple_path/scripts/base_mod/: multiple_path.py
tests/v0.1.3/data/sonetaa/: dataset.toml
tests/v0.1.3/data/sonetaa/scripts/: dataset.toml
tests/v0.1.3/data/sonetaa/scripts/EEG/: alpha.py
