[tool.poetry]
name = "sinagot"
version = "0.1.0"
description = "Python library to manage data processing on a dataset."
authors = ["Yann Beauxis <dev@yannbeauxis.net>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.6.1"
pandas = "^1.0.2"
toml = "^0.10.0"
json-log-formatter = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4.4"
rope = "^0.16.0"
sphinx = "^2.4.3"
doc8 = "^0.8.0"
jupyterlab = "^2.0.0"
black = "^19.10b0"
pytest-datafiles = "^2.0"
pytest-datadir = "^1.3.1"
dask = "^2.12.0"
distributed = "^2.12.0"
sphinx_rtd_theme = "^0.4.3"
m2r = "^0.2.1"
pytest-asyncio = "^0.10.0"
mkdocs = "^1.1"
markdown-include = "^0.5.1"
mkdocstrings = "^0.10.2"
mkdocs-material = "^5.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
