[tool.poetry]
name = "sinagot"
version = "0.2.3"
description = "Python library to batch scripts on a file-system workspace."
authors = [
    "Yann Beauxis <dev@yannbeauxis.net>",
    "Guillaume Dumas <deep@introspection.eu>",
    "Denis A. Engeman <denis.engemann@gmail.com>"]
maintainers = ["Yann Beauxis <dev@yannbeauxis.net>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/YannBeauxis/sinagot"
repository = "https://github.com/YannBeauxis/sinagot"
documentation = "https://sinagot.readthedocs.io"

[tool.poetry.dependencies]
python = "^3.6.1"
pandas = "^1.0.2"
toml = "^0.10.0"
json-log-formatter = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4.4"
black = "^19.10b0"
pytest-datafiles = "^2.0"
pytest-datadir = "^1.3.1"
dask = "^2.12.0"
distributed = "^2.12.0"
pytest-asyncio = "^0.10.0"
mkdocs = "^1.1"
markdown-include = "^0.5.1"
mkdocstrings = "^0.10.2"
mkdocs-material = "^5.0.1"
ipykernel = "^5.2.1"
rope = "^0.17.0"
jupyterlab = "^2.1.5"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
